# bcn-on-a-tree-story

./: Dockerfile  Dockerfile.chatgpt  Dockerfile.esab  README.md  nginx.site.conf  start.sh
boats_api/: .gitignore  Cargo.toml  Rocket.toml
boats_api/src/: ai.rs  db.rs  images.rs  main.rs
boats_web/: Cargo.toml  Trunk.toml  index.html  style.css
boats_web/src/: boats_api.rs  controllers.rs  data.rs  main.rs  models.rs  state.rs
boats_web/src/components/: animated_tree.rs  geolocation.rs  message_form.rs  message_item.rs  message_list.rs  mod.rs  safe_html.rs  tree_infos.rs  tree_item.rs  tree_list.rs  tree_list_player.rs
todo_desktop/src/: index.html  main.js  styles.css
todo_desktop/src-tauri/: Cargo.toml  tauri.conf.json
