[package]
name = "boats_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.18.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
surrealdb = "1.0.0-beta.8"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
urlencoding = "2.1"
url = "2.3"